"Render Audio..." does not always render keyframe transitions that have been placed in Volume, Pitch or Pan. #69682

Closed
opened 2019-09-09 19:40:58 +02:00 by Mikeycal Meyers · 8 comments

System Information
Operating system: Ubuntu 18.04.03 LTS
Graphics card: GTX 1060 6GB

Blender Version
2.80.75

Short description of error
"Render Audio..." does not always render keyframe transitions that have been placed in Volume, Pitch or Pan.

When you set keyframes in volume, pitch or pan, it will animate the the audio transition in the preview. But, if you export that audio in the Render Menu, using the "Render Audio..." option, sometimes it will render the keyframed transition and sometimes it won't -- it is behaving erratically.

Things that I have tried include clearing the cache with CTRL+R before I "Render Audio...". I have also tried setting the keyframes with " i " shortcut as well as clicking the animate property dot. Both seem to sometimes work and sometimes not work.

I am rendering audio with the following settings:

accuracy: 1024
Container: wav
Format: F32

Exact steps for others to reproduce the error

  1. Import a video into the VSE
  2. Pick 3 frames in the audio strip and insert a Volume keyframe into each -- creating a transition 0, 1, 0.
  3. You will be able to hear the transition in the preview playback
  4. Go to Render -> "Render Audio..."
  5. Set Container to "wav" and Format to F32
  6. Mix it down and listen to it.

repeat this process 3 times, sometimes inserting keyframes with the " i " shortcut and sometimes using the animate properties dot.

**System Information** Operating system: Ubuntu 18.04.03 LTS Graphics card: GTX 1060 6GB **Blender Version** 2.80.75 **Short description of error** "Render Audio..." does not always render keyframe transitions that have been placed in Volume, Pitch or Pan. When you set keyframes in volume, pitch or pan, it will animate the the audio transition in the preview. But, if you export that audio in the Render Menu, using the "Render Audio..." option, sometimes it will render the keyframed transition and sometimes it won't -- it is behaving erratically. Things that I have tried include clearing the cache with CTRL+R before I "Render Audio...". I have also tried setting the keyframes with " i " shortcut as well as clicking the animate property dot. Both seem to sometimes work and sometimes not work. I am rendering audio with the following settings: accuracy: 1024 Container: wav Format: F32 **Exact steps for others to reproduce the error** 1) Import a video into the VSE 2) Pick 3 frames in the audio strip and insert a Volume keyframe into each -- creating a transition 0, 1, 0. 3) You will be able to hear the transition in the preview playback 4) Go to Render -> "Render Audio..." 5) Set Container to "wav" and Format to F32 6) Mix it down and listen to it. repeat this process 3 times, sometimes inserting keyframes with the " i " shortcut and sometimes using the animate properties dot.

#69167 was marked as duplicate of this issue

#69167 was marked as duplicate of this issue

Added subscriber: @mikeycal

Added subscriber: @mikeycal

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

Looks similar to my report: #69167

Looks similar to my report: #69167

Added subscriber: @iss

Added subscriber: @iss

100% reproducible on imediate mixdown:
aud.zip

After adding exported audio to timeline(to see result), I can not reproduce issue anymore even if file is saved and reopened.

100% reproducible on imediate mixdown: [aud.zip](https://archive.blender.org/developer/F7788498/aud.zip) After adding exported audio to timeline(to see result), I can not reproduce issue anymore even if file is saved and reopened.

This issue was referenced by 6d3c34fe9d

This issue was referenced by 6d3c34fe9d1eabc7765275ff68600734be0e3acb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Richard Antalik self-assigned this 2019-10-08 22:11:21 +02:00
Thomas Dinges added this to the 2.81 milestone 2023-02-08 16:46:57 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69682
No description provided.